# WeFriends

./: Cargo.toml  README.md  build.rs
.github/workflows/: my-sync.yml
ComWeChatRobot/: .gitignore  README.md
ComWeChatRobot/CWeChatRobot/: AddBrandContact.cpp  AddFriend.h  AddFriendByV3.cpp  AddFriendByWxid.cpp  SendAtText.cpp  SendAtText.h  WeChatRobotCOM.vcxproj  WeChatRobotCOM.vcxproj.filters  WeChatRobotCOM_i.c  WeChatRobotCOM_i.h  WeChatRobotCOM_p.c
ComWeChatRobot/DWeChatRobot/: AddBrandContact.cpp  AddFriend.h  AddFriendByV3.cpp  AddFriendByWxid.cpp  CheckFriendStatus.cpp  DWeChatRobot.vcxproj  DWeChatRobot.vcxproj.filters  LogMsgInfo.cpp  LogMsgInfo.h  SearchContactByNet.cpp  SendAtText.h  wxsocket.cpp
src/: lib.rs  main.rs  util.rs  wechat_controller.rs  wechat_manager.rs
