[package]
name = "WeFriends"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
egui = "0.30.0"
eframe = "0.30.0"
egui-modal = "0.6.0"
libloading = "0.8.6"
anyhow = "1.0.98"
chrono = "0.4"
rand = "0.9.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
webbrowser = "1.0.5"

[build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = ["winnt"] }
